--- a/style.css
+++ b/style.css
@@ -22,15 +22,14 @@ html, body {
   width: 460px;
 }
 
-
 .color{
   float:left;
   height: 200px;
   width:200px;
-  margin: 15px;
+  margin: 10px;
   font-size: 45px;
   text-align: center;
-  line-height: 200px;
+  line-height: 180px;
   z-index: -10;
 }
 #red{
@@ -62,8 +61,9 @@ html, body {
 #yellow.light {
   background-color: #ff7
 }
+
 #center {
-  position: relative;
+  position: absolute;
   z-index: 1000;
   width:150px;
   height:150px;
